RESOLVED FIXED248930
[macOS UI-side compositing] Fix hit-testing in iframes (and some other things)
https://bugs.webkit.org/show_bug.cgi?id=248930
Summary [macOS UI-side compositing] Fix hit-testing in iframes (and some other things)
Simon Fraser (smfr)
Reported 2022-12-07 21:25:12 PST
We're still calling delegatesScrolling() in a few places where we should call delegatesScrollingToNativeView()
Attachments
Radar WebKit Bug Importer
Comment 1 2022-12-07 21:25:43 PST
Simon Fraser (smfr)
Comment 2 2022-12-07 21:26:11 PST
Simon Fraser (smfr)
Comment 3 2022-12-07 21:31:40 PST
EWS
Comment 4 2022-12-08 12:16:46 PST
Committed 257581@main (8c589785e316): <https://commits.webkit.org/257581@main> Reviewed commits have been landed. Closing PR #7305 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.