[macOS UI-side compositing] Fix hit-testing in iframes (and some other things) https://bugs.webkit.org/show_bug.cgi?id=248930 rdar://103080262

Reviewed by Tim Horton.

With UI-side compositing on macOS, events in iframes were offset because
`FrameView::convertFromContainingViewToRenderer()` failed to do the
`viewToContents()` conversion; checking `delegatesScrollingToNativeView()` fixes that.
Other fixes are noted below.

* Source/WebCore/inspector/InspectorOverlay.cpp:
(WebCore::InspectorOverlay::drawRulers): Fixed drawing of rules in scrolled content.
* Source/WebCore/page/FrameView.cpp:
(WebCore::FrameView::viewRectExpandedByContentInsets const): Follow the same code
path as macOS
(WebCore::FrameView::contentsResized): We rely on the scrollbar-related code path.
(WebCore::FrameView::computeScrollability const): We rely on the scrollbar-related code path.
(WebCore::FrameView::convertFromContainingViewToRenderer const): Fixes event coordinates in subframes.
(WebCore::FrameView::handleWheelEventForScrolling): Fixes wheel event handling.
* Source/WebKit/WebProcess/Automation/WebAutomationSessionProxy.cpp:
(WebKit::convertRectFromFrameClientToRootView): Follow the same code path as FrameView.
(WebKit::convertPointFromFrameClientToRootView): Ditto
* Source/WebKit/WebProcess/WebCoreSupport/WebChromeClient.cpp:
(WebKit::WebChromeClient::contentsSizeChanged const): Ditto

Canonical link: https://commits.webkit.org/257581@main